--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown_dom",
-  "version": "0.0.0",
+  "version": "0.0.1-0",
   "description": "\t\tlet file = `${process.env.HOME}/Desktop/test.docx`;",
   "main": "index.js",
   "scripts": {
